# fault-tolerance

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  docker_commands.txt  kvcg.json  libfabric_1.9.1-1_amd64.deb
.github/workflows/: c-cpp.yml
docs/: Doxyfile
docs/html/: annotated.html  backup__packet_8h_source.html  classBackupPacket-members.html  classBackupPacket.html  classClient-members.html  classClient.html  classKVCGConfig-members.html  classKVCGConfig.html  classLOG-members.html  classLOG.html  classNode-members.html  classNode.html  classServer-members.html  classServer.html  classShard-members.html  classShard.html  classes.html  classft_1_1Client-members.html  classft_1_1Client.html  classft_1_1Node-members.html  classft_1_1Node.html  classft_1_1Server-members.html  classft_1_1Server.html  classft_1_1Shard-members.html  classft_1_1Shard.html  client_8h_source.html  dir_2260ccd6c095f01e66bce5355828c509.html  dir_99649957641425795a0c71c40abbc69a.html  dir_a8c52556c44335d93f7c3b257c9e2ab0.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_e43f53c298e37ca0545089a0a1be76db.html  dir_ecb9b9ac2f921b476f9d19f96330ce9c.html  fault__tolerance_8h.html  fault__tolerance_8h_source.html  files.html  functions.html  functions_func.html  hierarchy.html  index.html  kvcg__config_8h_source.html  (+8 more)
docs/html/search/: all_0.js  all_1.js  all_2.js  all_4.js  all_5.js  all_69.js  all_6e.js  all_7.js  all_70.js  all_73.js  all_9.js  all_a.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  search.js  (+11 more)
docs/latex/: annotated.tex  classBackupPacket.tex  classClient.eps  classClient.tex  classKVCGConfig.tex  classLOG.tex  classNode.eps  classNode.tex  classServer.eps  classServer.tex  classShard.tex  classft_1_1Client.eps  classft_1_1Client.tex  classft_1_1Node.eps  classft_1_1Node.tex  classft_1_1Server.eps  classft_1_1Server.tex  classft_1_1Shard.tex  dir_99649957641425795a0c71c40abbc69a.tex  dir_a8c52556c44335d93f7c3b257c9e2ab0.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  dir_e43f53c298e37ca0545089a0a1be76db.tex  dir_ecb9b9ac2f921b476f9d19f96330ce9c.tex  fault__tolerance_8h.tex  files.tex  hierarchy.tex  refman.aux  refman.idx  refman.ilg  refman.ind  refman.out  refman.tex  refman.toc  structnet__data__t.tex
include/: fault_tolerance.h  ft_networking.h  kvcg_config.h  kvcg_logging.h  kvcg_networking.h
include/faulttolerance/: backup_packet.h  client.h  definitions.h  fault_tolerance.h  ft_networking.h  kvcg_config.h  node.h  server.h  shard.h
src/: CMakeLists.txt  client.cc  fault_tolerance.cc  kvcg_config.cc  server.cc  shard.cc
test/: CMakeLists.txt  Makefile  ftTest.cc  kvcg.json  run_gtest.sh  unittest_fault_tolerance.cc
